Fixed font spacing on invite friends module Fixed red parentheses on join page near terms and conditions Updated two words in talking chicken copy

--- a/public/stylesheets/sass/autocompletion.scss
+++ b/public/stylesheets/sass/autocompletion.scss
@@ -249,9 +249,12 @@ div.helper {
   color: $gold;
 }
 
-#invite_friends_middle #autocomplete{
-  width: 325px;
-  behavior: none;
+#invite_friends_middle{ 
+  #autocomplete{
+    width: 325px;
+    behavior: none;
+  }
+  .form-label{padding-top: 10px;}
 }
 
 .clear{
