--- a/public/stylesheets/sass/site_tutorial.scss
+++ b/public/stylesheets/sass/site_tutorial.scss
@@ -195,11 +195,12 @@ strong{
   padding: 10mm 10mm 5mm;
   h2, p{
     color: grey;
+    max-width: 40ex;
   }
   h2{
     font-size: 10mm;
     padding-bottom: 2mm;
-    max-width: 30ex;
+    text-align: center;
   }
   .no_thanks_tutorial{
     padding-top: 4px;
